v 2.5. Добавила визуализацию регистрации пользователя, юзер записывается в базу данных, пароль кодируется, тут все ок. Следующий шаг - визуализация страницы входа и чата.